Create API for retrieving combination of fund code and expense classes