@@ -1,31 +1,29 @@
 package org.folio.services.ledger;
 
-import one.util.streamex.StreamEx;
-import org.apache.commons.collections4.CollectionUtils;
-import org.folio.rest.acq.model.finance.LedgerCollection;
 import org.folio.rest.core.RestClient;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.core.models.RequestEntry;
-import org.folio.rest.exception.HttpException;
 import org.folio.rest.jaxrs.model.Ledger;
 import org.folio.rest.jaxrs.model.LedgersCollection;
-import org.folio.rest.jaxrs.model.Parameter;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 import static java.util.stream.Collectors.toList;
+import static one.util.streamex.StreamEx.ofSubLists;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 import static org.folio.rest.RestConstants.MAX_IDS_FOR_GET_RQ;
-import static org.folio.rest.util.ErrorCodes.LEDGER_NOT_FOUND_FOR_TRANSACTION;
+import static org.folio.rest.util.HelperUtils.collectResultsOnSuccess;
+import static org.folio.rest.util.HelperUtils.convertIdsToCqlQuery;
+import static org.folio.rest.util.ResourcePathResolver.LEDGERS_STORAGE;
+import static org.folio.rest.util.ResourcePathResolver.resourcesPath;
 
 public class LedgerService {
   private final RestClient ledgerStorageRestClient;
   private final LedgerTotalsService ledgerTotalsService;
   public static final String ID = "id";
-  private static final String ENDPOINT = "/finance/ledgers";
 
   public LedgerService(RestClient ledgerStorageRestClient, LedgerTotalsService ledgerTotalsService) {
     this.ledgerStorageRestClient = ledgerStorageRestClient;
@@ -73,32 +71,22 @@ public class LedgerService {
     return ledgerStorageRestClient.delete(id, requestContext);
   }
 
-  public CompletableFuture<List<org.folio.rest.acq.model.finance.Ledger>> getLedgersByIds(Collection<String> ledgerIds, RequestContext requestContext) {
-    String query = convertIdsToCqlQuery(ledgerIds, ID);
-    RequestEntry requestEntry = new RequestEntry(ENDPOINT).withQuery(query)
-      .withLimit(MAX_IDS_FOR_GET_RQ).withOffset(0);
-    return ledgerStorageRestClient.get(requestEntry, requestContext, LedgerCollection.class)
-      .thenApply(ledgerCollection -> {
-        if (ledgerIds.size() == ledgerCollection.getLedgers()
-          .size()) {
-          return ledgerCollection.getLedgers();
-        }
-        String missingIds = String.join(", ", CollectionUtils.subtract(ledgerIds, ledgerCollection.getLedgers()
-          .stream()
-          .map(org.folio.rest.acq.model.finance.Ledger::getId)
-          .collect(toList())));
-        throw new HttpException(404, LEDGER_NOT_FOUND_FOR_TRANSACTION.toError()
-          .withParameters(Collections.singletonList(new Parameter().withKey("ledgers")
-            .withValue(missingIds))));
-      });
+  public CompletableFuture<List<Ledger>> getLedgers(Collection<String> ledgerIds, RequestContext requestContext) {
+    return collectResultsOnSuccess(
+      ofSubLists(new ArrayList<>(ledgerIds), MAX_IDS_FOR_GET_RQ).map(ids -> getLedgersByIds(ids, requestContext))
+        .toList()).thenApply(
+      lists -> lists.stream()
+        .flatMap(Collection::stream)
+        .collect(toList()));
   }
 
-  public static String convertIdsToCqlQuery(Collection<String> ids, String idField) {
-    return convertFieldListToCqlQuery(ids, idField, true);
+  private CompletableFuture<List<Ledger>> getLedgersByIds(Collection<String> ids, RequestContext requestContext) {
+    String query = convertIdsToCqlQuery(ids);
+    RequestEntry requestEntry = new RequestEntry(resourcesPath(LEDGERS_STORAGE)).withQuery(query)
+      .withOffset(0)
+      .withLimit(MAX_IDS_FOR_GET_RQ);
+    return ledgerStorageRestClient.get(requestEntry, requestContext, LedgersCollection.class)
+      .thenApply(LedgersCollection::getLedgers);
   }
 
-  public static String convertFieldListToCqlQuery(Collection<String> values, String fieldName, boolean strictMatch) {
-    String prefix = fieldName + (strictMatch ? "==(" : "=(");
-    return StreamEx.of(values).joining(" or ", prefix, ")");
-  }
 }
